apps/bgd/overlays/bgd/bgd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  type: NodePort
  port:
    targetPort: 8080
  to:
    nodePort: 31443
    kind: Service
    name: bgd
    weight: 100
