apps/bgd/overlays/bgd/bgd-route.yaml
apiVersion: apps/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  type: NodePort
  port:
    targetPort: 8080
  to:
    nodePort: 31443
    kind: Service
    name: bgd
    weight: 100
